--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </fieldset>
 
             <!-- Форма редактирования изображения -->
-            <div class="img-upload__overlay  hidden">
+            <div class="img-upload__overlay hidden">
               <div class="img-upload__wrapper">
                 <div class="img-upload__preview-container">
 
@@ -249,7 +249,9 @@
         <p class="social__text">{{текст комментария}}</p>
       </li>
   </template>
-    <script src ="vendor/nouislider/nouislider.js"></script>
+    <script src="js/form.js" type="module"></script>
+    <script src="js/scale.js" type="module"></script>
+    <script src="vendor/nouislider/nouislider.js"></script>
     <script src="vendor/pristine/pristine.min.js"></script>
     <script src="js/main.js" type="module"></script>
     <script src="js/functions.js"></script>
